--- a/backend/static/css/scss/styles.scss
+++ b/backend/static/css/scss/styles.scss
@@ -9,6 +9,9 @@
 @import 'slides';
 @import 'homePage';
 @import 'contactJDForm';
-
-
-
+@import 'metodologia_trabajo';
+// videos
+@import 'videos_slide_container';
+// Projects section
+@import 'projects_section';
+@import 'skills_habilidades_tech';
